# PLA

./: .gitignore  PLA.cabal  README.md  hie.yaml
src/: EDPL.hs  EEDPL.hs  PLA.hs  PLASafe.hs
test/: EEDPLSpec.hs
