cabal-version: 3.0
name: PLA
version: 0.1.0.0
build-type: Simple

common defaults
  ghc-options:
    -Wall
    -O2

  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    DataKinds
    FlexibleInstances
    GADTs
    PartialTypeSignatures
    PolyKinds
    ScopedTypeVariables
    TypeApplications
    TypeOperators

  build-depends:
    base ^>=4.18.3.0,
    containers,

  default-language: Haskell2010

executable EDPL
  import: defaults
  hs-source-dirs: src
  main-is: EDPL.hs
  ghc-options:
    -main-is
    EDPL

executable PLA
  import: defaults
  hs-source-dirs: src
  main-is: PLA.hs
  ghc-options:
    -main-is
    PLA

executable PLASafe
  import: defaults
  hs-source-dirs: src
  main-is: PLASafe.hs
  ghc-options:
    -main-is
    PLASafe
